# seem2460

./: CNN.py  README.md  SVM.py  SVM2.py  age_rate.py  best_model.pth  best_stroke_mlp.pth  correlation_matrix.py  predictions.csv  print_result.py  pyproject.toml  raw_df.csv  split.py  stroke_prediction_cnn.pth  stroke_prediction_model.json  test_df.csv  train_df.csv  train_xgboost.py  train_xgoost.py  val_df.csv  xgboost_model.json
configs/: model_params.json
results/metrics/: model_performance.csv
